stopgap added to section2 slider

--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,6 @@ section h2{
 
 #section2{
 	height: 160%;
-	min-height: 38em;
 }
 
 #section2 h4{
